[tool.basedpyright]
typeCheckingMode = "basic"

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "helius-python"
version = "0.2.0"
authors = [
  { name="Markos Narinian", email="manarinian@gmail.com" },
]
description = "Typed Python client for the Helius API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx",
  "pydantic",
  "python-dotenv",
  "websockets",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/markosnarinian/helius-python"
Issues = "https://github.com/markosnarinian/helius-python/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "respx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/helius"]

[tool.pytest.ini_options]
pythonpath = ["src"]
